--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,16 +102,19 @@
     </div>
     <div class="card">
       <img class="card-img-top" src="https://images.unsplash.com/photo-1512314889357-e157c22f938d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5aaa2a72b49b8dede273d9e35340711c&auto=format&fit=crop&w=1951&q=80" alt="Card image cap">
-      <div class="card-body">
-        <h4 class="card-title">
-          <a href="/" onclick="href='/announcements'">
-            Announcements
-          </a>
-        </h4>
-        <li>Meeting Saturday December 9th 9:00 AM,, Don't Forget</li>
-        <p class="card-text">beer training opportunity Saturday</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+      <form class="announcement-form" action="/announcements" method="post">
+        <div class="card-body announcements" >
+          <h4 class="card-title">
+              Announcements
+          </h4>
+          <li>Meeting Saturday December 9th 9:00 AM,, Don't Forget</li>
+          <li contenteditable="true" class="card-text">beer training opportunity Saturday</li>
+          <p contenteditable="true" class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <button type="button" class="btn btn-primary" onclick = "addAnouncement()">Add Announcement</button>
+
+        </div>
+      </form>
+
     </div>
     <div class="card">
       <img class="card-img-top" src="https://images.unsplash.com/photo-1482398650355-d4c6462afa0e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0863c9e8c3f816262961303e82418fb4&auto=format&fit=crop&w=1950&q=80" alt="Card image cap">
@@ -128,4 +131,7 @@
     </div>
   </div>
 </div>
+<script type="text/javascript" src="/home.js">
+
+</script>
 <% include ./partials/footer %>
