--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,16 +16,19 @@
   <nav class="navbar navbar-expand-md navbar-light bg-light">
     <a href="/home" onclick="href='/home'" class="navbar-brand"> OTP
       <% if(currentUser) { %>
-        : <%=currentUser.name%>
-            <% } %>
-          </a>
+      :
+        <%=currentUser.name%>
+      <% } %>
+    </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ml-auto">
         <% if(!currentUser) { %>
-
+          <li class="nav-item">
+            <a href="register" onclick="href='/register'" class="nav-link">Register</a>
+          </li>
         <% } else {%>
 
         <li class="nav-item">
