--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,3 +88,12 @@ float: right;
   margin: 10px;
   margin-left: 0;
 }
+.deleteAnnouncement-btn{
+  margin-bottom: 10px;
+}
+.btn-group-xs > .btn, .btn-xs {
+  padding: .25rem .4rem;
+  font-size: .875rem;
+  line-height: .5;
+  border-radius: .2rem;
+}
